<?xml version = "1.0" encoding ="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="login"
        type="marzin.com.thegrouploss.utils.OnBoardItem"/>

</data>
<LinearLayout
              android:id="@+id/login_page"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/gradient"
              android:gravity="center_horizontal"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="marzin.com.thegrouploss.activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:fontFamily="@font/raleway_italic"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textIsSelectable="false"
            android:textSize="35sp"/>


    </LinearLayout>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_textbox"
                android:fontFamily="@font/sura"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_textbox"
                android:fontFamily="@font/sura_bold"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/bottom_signin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/signin_button"
                android:layout_width="343dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:background="#FFC582"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="5dp"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/google_signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="96dp"
                android:text="@string/action_sign_in_google"
                app:isDarkTheme="false"
                android:layout_alignParentLeft="true"/>


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="20dp"
            android:text="No account yet? "
            android:textSize="18sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/action_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/action_sign_up"
            android:textSize="18sp"
            android:textStyle="italic"/>


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/action_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/action_forgot_password"
        android:textSize="18sp"
        android:textStyle="italic"/>

</LinearLayout>

</LinearLayout>
</layout>